plugins {
    id 'java'
    id 'com.gradle.plugin-publish' version '2.1.1'
    id 'net.ltgt.errorprone' version '5.1.0'
}

group = 'io.github.greymagic27'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(26))
    }
}

dependencies {
    errorprone 'com.google.errorprone:error_prone_core:2.50.0'
    compileOnly 'org.jspecify:jspecify:1.0.0'
    implementation 'com.google.errorprone:error_prone_annotations:2.50.0'
    testImplementation platform('org.junit:junit-bom:6.1.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('-Xlint:deprecation')
    //noinspection GrUnresolvedAccess
    options.errorprone.disable('NoCanIgnoreReturnValueOnClasses')
}
tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}
/* tasks.withType(Javadoc).configureEach {
   (options as StandardJavadocDocletOptions).addStringOption('Xdoclint:all,-missing', '-quiet')
} */
tasks.named("build") {
    dependsOn("publishToMavenLocal")
}
tasks.named("check") {
    dependsOn("publishToMavenLocal")
}
tasks.named("test") {
    dependsOn("publishToMavenLocal")
}